AC-16 Update Gate module to use AnalyticsScope enum for dashboard analytics
- Add AnalyticsScope enum import to DashboardAnalyticsRequestHandler
- Replace magic "OVERVIEW" string filter with AnalyticsScope.TEAM enum check
- Update all test DashboardAnalytics objects to use new entity structure:
  - Change assessmentMatrixTeamId to assessmentMatrixScopeId
  - Add scope field with appropriate AnalyticsScope enum values
  - Update composite key format for team and assessment matrix scopes
  - Set teamId to null for ASSESSMENT_MATRIX scope analytics
- Maintain compatibility with word cloud and pillar scores functionality
- All 21 DashboardAnalyticsRequestHandler tests passing with new structure

🤖 Generated with [Claude Code](https://claude.ai/code)

Co-Authored-By: Claude <noreply@anthropic.com>